--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+##spring.datasource.url=jdbc:mysql://118.31.22.202:9527/xuexiqg?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
+##spring.datasource.username=root
+##spring.datasource.password=qweqwe520
 server.port=1086
+##
+##logging.level.com.mzx.xxqganswer.dao.AnswerMaDao=debug
